--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
     height: 100vh;
     width: 100%;
+    
 
     background-image: linear-gradient(to bottom, hsl(273, 75%, 66%), hsl(240, 73%, 65%));
 }
@@ -32,6 +33,12 @@ main {
     background-color: white;
 
     margin-top: 120px;
+
+    overflow: hidden;
+
+    position: relative;
+
+    top: 0px;
 
     display: flex;
 
@@ -59,7 +66,7 @@ main {
 
     margin: -560px 0px 0px 0px;
 
-    left: -280px;
+    right: 60%;
     
     width: 985px;
 
@@ -73,7 +80,7 @@ main {
 
     margin: -200px 0px 0px 0px;
 
-    left: 290px;
+    right: 59%;
     
     width: 400px;
     
@@ -87,7 +94,7 @@ main {
 
     margin: -5px 0px 0px 0px;
 
-    left: -279px;
+    right: 60%;
     
     width: 981px;
 
@@ -117,8 +124,7 @@ summary::marker {
 
 summary::after {
     content: url(./images/icon-arrow-down.svg);
-    position: absolute;
-    right: 30%;
+    float: right;
 }
 
 details[open] summary::after {
@@ -166,7 +172,7 @@ hr {
 @media (max-width: 1700px) {
 
     summary::after {
-        right: 32%;
+        right: 30%;
     }
 
 }
@@ -176,6 +182,11 @@ hr {
 @media (max-width: 1400px) {
 
     .box_white {
+        position: relative;
+        
+        top: 0px;
+
+        overflow: visible;
 
         width: 375px;
 
@@ -194,21 +205,22 @@ hr {
         margin-left: -50%;
     }
 
-    .img_mid {    
-        height: 30%;
-        width: 30%;
+    .img_mid { 
+        
+        height: 50%;
+        width: 50%;
 
-        left: 35%; 
-        top: 32%;
+        left: 25%; 
+        top: 12%;
     }
 
     .img_end {
 
         height: 15%;
-        width: 20%;
+        width: 50%;
 
-        left: 40%;
-        top: 21.5%;
+        left: 25%;
+        top: 2%;
     }
 
     details {
@@ -216,7 +228,10 @@ hr {
     }
 
     summary::after {
-        right: 39%;
+        position: absolute;
+        right: 10%;
+        float: none;
+        
     }
 
     hr {
@@ -226,123 +241,204 @@ hr {
 
 @media (max-width: 1100px) {
 
-    .img_mid {    
-        height: 30%;
-        width: 30%;
+    .box_white {
+        position: relative;
 
-        left: 35%; 
-        top: 32%;
+        top: 0px;
+
+        overflow: visible;
+
+        width: 375px;
+
+        justify-content: center;
+
+    }
+
+    .img_mid { 
+        
+        height: 50%;
+        width: 50%;
+
+        left: 25%; 
+        top: 12%;
     }
 
     .img_end {
 
         height: 15%;
-        width: 25%;
+        width: 50%;
 
-        left: 38%;
-        top: 21.5%;
+        left: 25%;
+        top: 2%;
     }
 
     summary::after {
-        right: 35%;
+        position: absolute;
+        right: 10%;
+        float: none;
     }
 }
 
 @media (max-width: 900px) {
 
-    .img_mid {
-        height: 30%;
-        width: 30%;
+    .box_white {
+        position: relative;
 
-        left: 35%; 
-        top: 32.5%;
+        top: 0px;
 
+        overflow: visible;
+
+        width: 375px;
+
+        justify-content: center;
+
+    }
+
+    .img_mid { 
+        
+        height: 50%;
+        width: 50%;
+
+        left: 25%; 
+        top: 12%;
     }
 
     .img_end {
 
         height: 15%;
-        width: 28%;
+        width: 50%;
 
-        left: 36%;
-        top: 23%;
+        left: 25%;
+        top: 2%;
     }
 
     summary::after {
-        right: 34%;
+        position: absolute;
+        right: 10%;
+        float: none;
     }
 }
 
 @media (max-width: 700px) {
 
-    .img_end {
+    .box_white {
+        position: relative;
 
-        height: 13%;
-        width: 30%;
+        overflow: visible;
 
-        left: 34%;
-        top: 23%;
-    }
+        top: 0px;
 
-    summary::after {
-        right: 30%;
-    }
+        width: 375px;
 
-}
-
-@media (max-width: 600px) {
-
-    .img_mid {
-        height: 30%;
-        width: 30%;
-
-        left: 35%; 
-        top: 32.5%;
+        justify-content: center;
 
     }
 
-    .img_end {
+    .img_mid { 
+        
+        height: 50%;
+        width: 50%;
 
-        height: 12%;
-        width: 32%;
-
-        left: 34%;
-        top: 22%;
-    }
-
-    summary::after {
-        right: 26%;
-    }
- 
-
-}
-
-@media (max-width: 400px) {
-
-   .box_white {
-       margin-left: 11.5%;
-   }
-
-    .img_mid {
-        height: 60%;
-        width: 60%;
-
-        left: 26.5%; 
-        top: 15%;
-
+        left: 25%; 
+        top: 12%;
     }
 
     .img_end {
 
         height: 15%;
-        width: 60%;
+        width: 50%;
 
         left: 25%;
-        top: 19%;
+        top: 2%;
     }
 
     summary::after {
-        right: 5%;
+        position: absolute;
+        right: 10%;
+        float: none;
+    }
+}
+
+@media (max-width: 600px) {
+
+    .box_white {
+        position: relative;
+
+        top: 0px;
+
+        overflow: visible;
+
+        width: 375px;
+
+        justify-content: center;
+
+    }
+
+    .img_mid { 
+        
+        height: 50%;
+        width: 50%;
+
+        left: 25%; 
+        top: 12%;
+    }
+
+    .img_end {
+
+        height: 15%;
+        width: 50%;
+
+        left: 25%;
+        top: 2%;
+    }
+
+    summary::after {
+        position: absolute;
+        right: 10%;
+        float: none;
+    }
+
+}
+
+@media (max-width: 400px) {
+
+    .box_white {
+        position: relative;
+
+        top: 0px;
+
+        overflow: visible;
+
+        left: 4%;
+
+        width: 370px;
+
+        justify-content: center;
+
+    }
+
+    .img_mid { 
+        
+        height: 50%;
+        width: 50%;
+
+        left: 25%; 
+        top: 12%;
+    }
+
+    .img_end {
+
+        height: 15%;
+        width: 50%;
+
+        left: 25%;
+        top: 2%;
+    }
+
+    summary::after {
+        position: absolute;
+        right: 10%;
+        float: none;
     }
 
 }
